==> ManagementCenterInnsbruck/iNav_TC233/0_Src/0_AppSw/Tricore/Main/inav/src/main/drivers/bus_spi.c <==
#include <stdbool.h>
#include <stdint.h>
#include <platform.h>
#include "drivers/bus_spi.h"
#include "drivers/exti.h"
#include "drivers/io.h"
#include "drivers/io_impl.h"
#include "drivers/rcc.h"
#include "drivers/nvic.h"
#define SPI1_NSS_PIN    P2013
#define SPI1_SCK_PIN    P2011
#define SPI1_MISO_PIN   P2012
#define SPI1_MOSI_PIN   P2014
#define GPIO_AF_SPI1    GPIO_AF_5
#define GPIO_AF_SPI2    GPIO_AF_5
#define GPIO_AF_SPI3    GPIO_AF_6
#define SPI1_NSS_PIN    PA4
#define SPI1_SCK_PIN    PA5
#define SPI1_MISO_PIN   PA6
#define SPI1_MOSI_PIN   PA7
#define SPI2_NSS_PIN    PB12
#define SPI2_SCK_PIN    PB13
#define SPI2_MISO_PIN   PB14
#define SPI2_MOSI_PIN   PB15
#define SPI3_NSS_PIN    PA15
#define SPI3_SCK_PIN    PB3
#define SPI3_MISO_PIN   PB4
#define SPI3_MOSI_PIN   PB5
#define SPI1_NSS_PIN NONE
#define SPI2_NSS_PIN NONE
#define SPI3_NSS_PIN NONE

void spiInitDevice(SPIDevice device)
{
    spiDevice_t *spi = &(spiHardwareMap[device]);

#ifdef SDCARD_SPI_INSTANCE
    if (spi->dev == SDCARD_SPI_INSTANCE) {
        spi->leadingEdge = true;
    }
#endif
#ifdef RX_SPI_INSTANCE
    if (spi->dev == RX_SPI_INSTANCE) {
        spi->leadingEdge = true;
    }
#endif

#ifndef AURIX
    // Enable SPI clock
    RCC_ClockCmd(spi->rcc, ENABLE);
    RCC_ResetCmd(spi->rcc, ENABLE);
#endif

    IOInit(IOGetByTag(spi->sck),  OWNER_SPI, RESOURCE_SPI_SCK,  device + 1);
    IOInit(IOGetByTag(spi->miso), OWNER_SPI, RESOURCE_SPI_MISO, device + 1);
    IOInit(IOGetByTag(spi->mosi), OWNER_SPI, RESOURCE_SPI_MOSI, device + 1);

#ifdef AURIX

    IfxQspi_SpiMaster_Config config;
    IfxQspi_SpiMaster_initModuleConfig(&config, spi->qspi);

    config.base.mode			= SpiIf_Mode_master;
    config.base.maximumBaudrate	= 10000000;
    config.base.txPriority		= spi->txPrio;
    config.base.rxPriority		= spi->rxPrio;
    config.dma.txDmaChannelId	= spi->txDmaChannelId;
    config.dma.rxDmaChannelId	= spi->rxDmaChannelId;
    config.dma.useDma			= 1;

    GPIO_TypeDef* port;
    uint8_t pinIndex;

    IfxQspi_SpiMaster_Pins pins =
    {
    	NULL, IfxPort_OutputMode_pushPull,		// SCLK
		NULL, IfxPort_OutputMode_pushPull,
		NULL, IfxPort_InputMode_pullDown,
		IfxPort_PadDriver_cmosAutomotiveSpeed3
    };

    for (int i=0; i<IFXQSPI_PINMAP_NUM_MODULES; i++)
    {
    	port = IO_GPIO(IOGetByTag(spi->sck));
    	pinIndex = IO_Pin(IOGetByTag(spi->sck));

    	for (int j=0; j<IFXQSPI_PINMAP_SCLK_OUT_NUM_ITEMS; j++)
    		if (IfxQspi_Sclk_Out_pinTable[i][j] != NULL)
				if (IfxQspi_Sclk_Out_pinTable[i][j]->pin.port == port &&
					IfxQspi_Sclk_Out_pinTable[i][j]->pin.pinIndex == pinIndex &&
					IfxQspi_Sclk_Out_pinTable[i][j]->module == (Ifx_QSPI*)spi->qspi)
					pins.sclk = IfxQspi_Sclk_Out_pinTable[i][j];

    	port = IO_GPIO(IOGetByTag(spi->mosi));
    	pinIndex = IO_Pin(IOGetByTag(spi->mosi));

    	for (int j=0; j<IFXQSPI_PINMAP_MTSR_OUT_NUM_ITEMS; j++)
    		if (IfxQspi_Mtsr_Out_pinTable[i][j] != NULL)
				if (IfxQspi_Mtsr_Out_pinTable[i][j]->pin.port == port &&
					IfxQspi_Mtsr_Out_pinTable[i][j]->pin.pinIndex == pinIndex &&
					IfxQspi_Mtsr_Out_pinTable[i][j]->module == (Ifx_QSPI*)spi->qspi)
					pins.mtsr = IfxQspi_Mtsr_Out_pinTable[i][j];

    	port = IO_GPIO(IOGetByTag(spi->miso));
    	pinIndex = IO_Pin(IOGetByTag(spi->miso));

    	for (int j=0; j<IFXQSPI_PINMAP_MRST_IN_NUM_ITEMS; j++)
    		if (IfxQspi_Mrst_In_pinTable[i][j] != NULL)
				if (IfxQspi_Mrst_In_pinTable[i][j]->pin.port == port &&
					IfxQspi_Mrst_In_pinTable[i][j]->pin.pinIndex == pinIndex &&
					IfxQspi_Mrst_In_pinTable[i][j]->module == (Ifx_QSPI*)spi->qspi)
					pins.mrst = IfxQspi_Mrst_In_pinTable[i][j];
    }

    config.pins = &pins;

    IfxQspi_SpiMaster_initModule(&spi->master, &config);

#else

#if defined(STM32F3) || defined(STM32F4)
    if (spi->leadingEdge) {
        IOConfigGPIOAF(IOGetByTag(spi->sck),  SPI_IO_AF_SCK_CFG, spi->af);
        IOConfigGPIOAF(IOGetByTag(spi->miso), SPI_IO_AF_MISO_CFG, spi->af);
        IOConfigGPIOAF(IOGetByTag(spi->mosi), SPI_IO_AF_CFG, spi->af);
    } else {
        IOConfigGPIOAF(IOGetByTag(spi->sck),  SPI_IO_AF_CFG, spi->af);
        IOConfigGPIOAF(IOGetByTag(spi->miso), SPI_IO_AF_CFG, spi->af);
        IOConfigGPIOAF(IOGetByTag(spi->mosi), SPI_IO_AF_CFG, spi->af);
    }

    if (spi->nss) {
        IOConfigGPIOAF(IOGetByTag(spi->nss), SPI_IO_CS_CFG, spi->af);
    }
#endif

    // Init SPI hardware
    SPI_I2S_DeInit(spi->dev);

    SPI_InitTypeDef spiInit;
    spiInit.SPI_Mode = SPI_Mode_Master;
    spiInit.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
    spiInit.SPI_DataSize = SPI_DataSize_8b;
    spiInit.SPI_NSS = SPI_NSS_Soft;
    spiInit.SPI_FirstBit = SPI_FirstBit_MSB;
    spiInit.SPI_CRCPolynomial = 7;
    spiInit.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_8;

    if (spi->leadingEdge) {
        spiInit.SPI_CPOL = SPI_CPOL_Low;
        spiInit.SPI_CPHA = SPI_CPHA_1Edge;
    } else {
        spiInit.SPI_CPOL = SPI_CPOL_High;
        spiInit.SPI_CPHA = SPI_CPHA_2Edge;
    }

#ifdef STM32F303xC
    // Configure for 8-bit reads.
    SPI_RxFIFOThresholdConfig(spi->dev, SPI_RxFIFOThreshold_QF);
#endif

    SPI_Init(spi->dev, &spiInit);
    SPI_Cmd(spi->dev, ENABLE);

    if (spi->nss) {
        // Drive NSS high to disable connected SPI device.
        IOHi(IOGetByTag(spi->nss));
    }

#endif

}

bool spiIsBusBusy(SPI_TypeDef *instance)
{

#ifdef AURIX

	return (IfxQspi_SpiMaster_getStatus(instance) == SpiIf_Status_busy);

#else

#ifdef STM32F303xC
    return SPI_GetTransmissionFIFOStatus(instance) != SPI_TransmissionFIFOStatus_Empty || SPI_I2S_GetFlagStatus(instance, SPI_I2S_FLAG_BSY) == SET;
#else
    return SPI_I2S_GetFlagStatus(instance, SPI_I2S_FLAG_TXE) == RESET || SPI_I2S_GetFlagStatus(instance, SPI_I2S_FLAG_BSY) == SET;
#endif

#endif //AURIX

}

bool spiTransfer(SPI_TypeDef *instance, uint8_t *out, const uint8_t *in, int len)
{
    uint16_t spiTimeout = 1000;

#ifndef AURIX

    instance->DR;
    while (len--) {
        uint8_t b = in ? *(in++) : 0xFF;
        while (SPI_I2S_GetFlagStatus(instance, SPI_I2S_FLAG_TXE) == RESET) {
            if ((spiTimeout--) == 0)
                return spiTimeoutUserCallback(instance);
        }
#ifdef STM32F303xC
        SPI_SendData8(instance, b);
#else
        SPI_I2S_SendData(instance, b);
#endif
        spiTimeout = 1000;
        while (SPI_I2S_GetFlagStatus(instance, SPI_I2S_FLAG_RXNE) == RESET) {
            if ((spiTimeout--) == 0)
                return spiTimeoutUserCallback(instance);
        }
#ifdef STM32F303xC
        b = SPI_ReceiveData8(instance);
#else
        b = SPI_I2S_ReceiveData(instance);
#endif
        if (out)
            *(out++) = b;
    }

#else

    spiTimeout = 0xffff;

    while(IfxQspi_SpiMaster_getStatus(instance) == SpiIf_Status_busy)
    	if ((spiTimeout--) == 0)
    		return spiTimeoutUserCallback(instance);

    IfxQspi_SpiMaster_exchange(instance, (const void*)in, (void*)out, len);

    spiTimeout = 0xffff;

    while(IfxQspi_SpiMaster_getStatus(instance) == SpiIf_Status_busy)
    	if ((spiTimeout--) == 0)
    		return spiTimeoutUserCallback(instance);

#endif

    return true;
}

void spiSetSpeed(SPI_TypeDef *instance, SPIClockSpeed_e speed)
{
#define BR_CLEAR_MASK 0xFFC7
    SPIDevice device = spiDeviceByInstance(instance);
    if (device == SPIINVALID) {
        return;
    }

#ifndef AURIX
    SPI_Cmd(instance, DISABLE);

    uint16_t tempRegister = instance->CR1;
    tempRegister &= BR_CLEAR_MASK;
    tempRegister |= spiHardwareMap[device].divisorMap[speed];
    instance->CR1 = tempRegister;

    SPI_Cmd(instance, ENABLE);
#else

    IfxQspi_SpiMaster_setChannelBaudrate(instance, spiHardwareMap[device].divisorMap[speed]);

#endif
}
